trying to fix overflow

--- a/css/style.css
+++ b/css/style.css
@@ -12,6 +12,7 @@
     scroll-behavior: smooth;
     font-family: 'satoshi-medium', sans-serif;
     cursor: auto;
+    overflow-x: hidden;
 }
 
 body {
